--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "@babel/runtime": "^7.14.8",
     "meteor-node-stubs": "^1.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.0.0-alpha-64931821a-20210808",
+    "react-dom": "^18.0.0-alpha-64931821a-20210808"
   },
   "meteor": {
     "mainModule": {
